crates/codira_codegen/src/snapshots/codira_codegen__test__assign_bit_op_i32.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    pub fn assign_bitand(a: i32, b: i32) -> i32 {\n        a &= b;\n        a\n    }\n    pub fn assign_bitor(a: i32, b: i32) -> i32 {\n        a |= b;\n        a\n    }\n    pub fn assign_bitxor(a: i32, b: i32) -> i32 {\n        a ^= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define i32 @assign_bitand(i32 %0, i32 %1) {
body:
  %bit_and = and i32 %0, %1
  ret i32 %bit_and
}

define i32 @assign_bitor(i32 %0, i32 %1) {
body:
  %bit_or = or i32 %0, %1
  ret i32 %bit_or
}

define i32 @assign_bitxor(i32 %0, i32 %1) {
body:
  %bit_xor = xor i32 %0, %1
  ret i32 %bit_xor
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

