crates/codira_codegen/src/snapshots/codira_codegen__test__assign_bit_op_i64.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    pub fn assign_bitand(a: i64, b: i64) -> i64 {\n        a &= b;\n        a\n    }\n    pub fn assign_bitor(a: i64, b: i64) -> i64 {\n        a |= b;\n        a\n    }\n    pub fn assign_bitxor(a: i64, b: i64) -> i64 {\n        a ^= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define i64 @assign_bitand(i64 %0, i64 %1) {
body:
  %bit_and = and i64 %0, %1
  ret i64 %bit_and
}

define i64 @assign_bitor(i64 %0, i64 %1) {
body:
  %bit_or = or i64 %0, %1
  ret i64 %bit_or
}

define i64 @assign_bitxor(i64 %0, i64 %1) {
body:
  %bit_xor = xor i64 %0, %1
  ret i64 %bit_xor
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

