crates/codira_codegen/src/snapshots/codira_codegen__test__assign_bit_op_i8.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    pub fn assign_bitand(a: i8, b: i8) -> i8 {\n        a &= b;\n        a\n    }\n    pub fn assign_bitor(a: i8, b: i8) -> i8 {\n        a |= b;\n        a\n    }\n    pub fn assign_bitxor(a: i8, b: i8) -> i8 {\n        a ^= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define i8 @assign_bitand(i8 %0, i8 %1) {
body:
  %bit_and = and i8 %0, %1
  ret i8 %bit_and
}

define i8 @assign_bitor(i8 %0, i8 %1) {
body:
  %bit_or = or i8 %0, %1
  ret i8 %bit_or
}

define i8 @assign_bitxor(i8 %0, i8 %1) {
body:
  %bit_xor = xor i8 %0, %1
  ret i8 %bit_xor
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

